[package]
name = "apemode"
version = "0.1.1"
edition = "2021"
authors = ["ash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.38.31", features = ["fs", "stdio", "pipe"] }
nix = { version = "0.27.1", features = ["process"] }
exec = "0.3.1"
